# playos-runtime

./: AGENTS.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: implementation-task.md
.github/workflows/: build.yml
compositor/: BRINGUP.md  CMakeLists.txt  playos-compositor.c
compositor/include/playos/compositor/: compositor.hpp
compositor/protocol/: playos-compositor-control-v1.xml  playos-game-v1.xml  playos-shell-v1.xml
compositor/src/: compositor.cpp  main.cpp
include/playos/runtime/: process.h
src/: main.cpp  process.cpp  process_posix.cpp  process_windows.cpp
